--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hola chupapijas</title>
+    <title>HOLA</title>
     <link href="index.css" rel="stylesheet " />
     <script src="index.js" type="text/javascript" defer></script>
 </head>
 <body>
     <main>
-        <h1>Hola chupapijas</h1>
+        <h1>CHUPAPIJAS</h1>
         <form id="cifrador" autocomplete="off">
             <input id="input-original" spellcheck="false" placeholder="Ingrese el texto" type="text" name="text">
         </form>
